# kubernetrion

./: .gitignore  CMakeLists.txt  README.md  compute.c  directory.c  directory.h  file.c  file.h  process.c  process.h  processGenerator.c  processor.c  processor.h  queue.c  queue.h  round_robin.c  round_robin.h
include/: directory.h  directory_b_tree.h  file.h  file_b_tree.h  generator.h  graph_vertex.h  process-ai-recommends.h  process.h  process_b_tree.h  process_generator.h  process_list.h  process_names.h  process_queue.h  process_statistics.h  process_stats.h  process_table.h  processor.h  scheduler.h
src/: graph_vertex.c  process_names.c  sampe
src/compute/: compute.c  process_statistics.c
src/directory/: directory.c
src/file/: file.c
src/generator/: process_generator.c
src/process/: process-ai-reccommends.c  process.c  processGenerator.c  process_generator.c  process_list.c  process_queue.c
src/process_table/: process_table.c
src/processor/: processor.c
src/queue/: process_queue.c  queue.c
src/stats/: process_stats.c
